[build-system]
    build-backend = "maturin"
    requires      = ["maturin>=1.9,<2.0"]

[project]
    classifiers = [
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Programming Language :: Rust",
    ]
    # No runtime Python dependencies; tests are run in CI.
    dependencies    = []
    dynamic         = ["version"]
    name            = "rm-referee-protocol-py"
    requires-python = ">=3.8"
[tool.maturin]
    features = ["pyo3/extension-module"]
